# system_prog

./: CMakeLists.txt
lab_1/task_1/: a  main.c  users.txt
lab_1/task_2/: 1  1_1  1_2  a  main.c
lab_1/task_3/: a  main.c
lab_1/task_5/: a  main.c
lab_1/task_6/: a  b  client.c  server.c
lab_1/task_7/: a  main.c
